// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEntries rendering renders expected elements 1`] = `
<div
  className="ListEntries"
  id="test"
>
  <div
    className="ListEntries__item  ListEntries__gridItem"
    data-bcn-id="list-item"
  >
    <div
      aria-label="Remove"
      className="ListEntries__icon"
      data-bcn-id="remove-item"
      onClick={[Function]}
      role="button"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when column is set 1`] = `
<div
  className="ListEntries"
  id="test"
>
  <div
    className="ListEntries__item "
    data-bcn-id="list-item"
  >
    <div
      aria-label="Remove"
      className="ListEntries__icon"
      data-bcn-id="remove-item"
      onClick={[Function]}
      role="button"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when highlightKey is set 1`] = `
<div
  className="ListEntries"
  id="test"
>
  <div
    className="ListEntries__item  ListEntries__item--highlight ListEntries__gridItem"
    data-bcn-id="list-item"
  >
    <div
      aria-label="Remove"
      className="ListEntries__icon"
      data-bcn-id="remove-item"
      onClick={[Function]}
      role="button"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;

exports[`ListEntries rendering renders expected elements when the item has className 1`] = `
<div
  className="ListEntries"
  id="test"
>
  <div
    className="ListEntries__item  ListEntries__gridItem"
    data-bcn-id="list-item"
  >
    <div
      aria-label="Remove"
      className="ListEntries__icon"
      data-bcn-id="remove-item"
      onClick={[Function]}
      role="button"
    >
      <SvgIcon
        icon={
          Object {
            "icon": Array [],
          }
        }
      />
    </div>
    <div
      className="TestClass ListEntries__name"
    >
      test
    </div>
  </div>
</div>
`;
